# baaraan

./: .gitignore  404.html  CMakeLists.txt  CNAME  Doxybook  Doxyfile  README.md  baaraan.cpp  index.html  mkdocs.yml  mvrandom.cpp  requirements.txt
.github/workflows/: macos.yml  mkdocs.yml  mkdocs.yml.disabled  ubuntu.yml
docs/: custom.css  index.md
doxygen/: index.html
doxygen/Classes/: index.html
doxygen/Classes/classbaaraan_1_1gig__distribution/: index.html
doxygen/Classes/classbaaraan_1_1gig__distribution_1_1param__type/: index.html
doxygen/Classes/classbaaraan_1_1inverse__gaussian__distribution/: index.html
doxygen/Classes/classbaaraan_1_1inverse__gaussian__distribution_1_1param__type/: index.html
doxygen/Classes/classbaaraan_1_1mv__t__distribution/: index.html
doxygen/Classes/classbaaraan_1_1mv__t__distribution_1_1param__type/: index.html
doxygen/Classes/classbaaraan_1_1mvnorm__distribution/: index.html
doxygen/Classes/classbaaraan_1_1mvnorm__distribution_1_1param__type/: index.html
doxygen/Classes/classbaaraan_1_1rectified__normal__distribution/: index.html
doxygen/Classes/classbaaraan_1_1rectified__normal__distribution_1_1param__type/: index.html
doxygen/Classes/classbaaraan_1_1truncated__mvnorm__distribution/: index.html
doxygen/Classes/classbaaraan_1_1truncated__mvnorm__distribution_1_1param__type/: index.html
doxygen/Classes/classbaaraan_1_1truncated__normal__distribution/: index.html
doxygen/Classes/classbaaraan_1_1truncated__normal__distribution_1_1param__type/: index.html
doxygen/Modules/: index.html
doxygen/Modules/group___multivariate_distribution/: index.html
doxygen/Modules/group___rectified_distributions/: index.html
doxygen/Modules/group___truncated_distributions/: index.html
doxygen/Modules/group___univariate_distributions/: index.html
doxygen/Namespaces/: index.html
doxygen/Namespaces/namespacebaaraan/: index.html
include/: baaraan.hpp  mvrandom.hpp
include/baaraan/: random.h
include/baaraan/dists/: mv_t_distribution.h  mvnorm_distribution.h  rectified_normal_distribution.h  truncated_mvnorm_distribution.h  truncated_normal_distribution.h
include/dists/: mv_t_distribution.h  mvnorm_distribution.h  rectified_normal_distribution.h  truncated_mvnorm_distribution.h  truncated_normal_distribution.h
search/: search_index.json
support/cmake/: baaraan-config.cmake.in  baaraan.pc.in
test/: CMakeLists.txt  mvnorm_test.cpp
tests/: CMakeLists.txt  mvnorm_distribution_test.cpp  mvnorm_test.cpp
